<?xml version="1.0" encoding="utf-8"?>

<com.example.vybe.util.CustomScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_edit_vibes_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp" >

            <TextView
                android:id="@+id/add_edit_vibe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/add_vibe_name"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp" >


            <ImageView
                android:id="@+id/vibe_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_no_vibe" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reason_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reason_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="false"
                    android:hint="@string/reason_hint"
                    android:inputType="text"
                    android:maxLength="20" />
            </com.google.android.material.textfield.TextInputLayout>

            <fragment
                android:id="@+id/soc_sit_field_fragment"
                android:name="com.example.vybe.Fragments.SocSitFieldFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <fragment
                android:id="@+id/image_field_fragment"
                android:name="com.example.vybe.Fragments.ImageFieldFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_add_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pick_location" />

                <ImageButton
                    android:id="@+id/btn_remove_location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/quantum_ic_clear_grey600_24" />

            </LinearLayout>

            <fragment
                android:id="@+id/add_edit_map_fragment"
                android:name="com.example.vybe.Fragments.MapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp" />

            <Button
                android:id="@+id/add_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</com.example.vybe.util.CustomScrollView>