<?xml version="1.0" encoding="utf-8"?>
<com.example.vybe.util.CustomScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_view_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context=".Activities.ViewVibeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/view_vibes_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:contentInsetStart="0dp">

            <TextView
                android:id="@+id/view_vybe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/view_vibe_name"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/view_vibe_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vibeless" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp" >

            <TableRow
                android:id="@+id/view_date_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/view_date_time_label"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_time"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_date_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/view_reason_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/view_reason_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reason"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_reason_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                android:id="@+id/view_soc_sit_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/view_soc_sit_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/social_situation"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/view_soc_sit_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp" />
            </TableRow>

        </TableLayout>

        <ImageView
            android:id="@+id/reason_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true" />

        <fragment
            android:id="@+id/view_vibe_map"
            android:name="com.example.vybe.Fragments.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>
</com.example.vybe.util.CustomScrollView>