...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_vibes_toolbar"
        android:layout_alignParentTop="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_vibe_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/my_vibe_menu_layout"
        android:layout_below="@id/vibe_filter_fragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_vibe_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/my_vibe_menu_layout"
        android:layout_alignEnd="@id/my_vibe_list"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
...
